# cmake_tutorial

./: .gitignore  .gitmodules  A Basic Starting Point.md  Adding Generator Expressions.md  Adding Support for a Testing Dashboard.md  Adding System Introspection.md  Adding Usage Requirements for a Library.md  Adding a Custom Command and Generated File.md  Adding a Library.md  Installing and Testing.md  Packaging an Installer.md  README.md  Selecting Static or Shared Libraries.md  index.md
another_cmake_tutorial/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  build.sh  cmake_tutorialConfig.h.in  configure.sh  main.cpp  run.sh
another_cmake_tutorial/Adder/: CMakeLists.txt  adder.cpp
